--- a/bot.ini
+++ b/bot.ini
@@ -1,19 +1,19 @@
 [BotConfig]
-token=1692541372:AAHspK0xhdVamtgz5N0u5cJZ_BQqDSiuG-0
+token=1522227092:AAH1mQtbBY6MnfClkSwprX4jWiIW2x8eMlo
 
 [RedisConfig]
-host=redis-19208.c239.us-east-1-2.ec2.cloud.redislabs.com
-port=19208
-password=ytRn88FV4UdQC8iVGgvTkejJr3rBLUXr
+host=redis-14035.c232.us-east-1-2.ec2.cloud.redislabs.com
+port=14035
+password=xbVhac1dTNDMm9uyjl2cY0A1owqHt9As
 db=0
 
 [StandartValueConfig]
 min_length_nickname=4
-max_length_nickname=40
-min_length_description=8
-max_length_description=300
-standart_name=Неизвестный
-standart_description=Скрытность - моё второе имя
+max_length_nickname=60
+min_length_description=6
+max_length_description=500
+standart_name=uncnown
+standart_description=cкрытность - моё второе имя
 time_sleep_new_member=0.2
-time_sleep_end_member=0.4
+time_sleep_end_member=0.3
 time_sleep_new_message=0.1
