edit loader and some functions

--- a/bot.ini
+++ b/bot.ini
@@ -2,9 +2,9 @@
 token=1522227092:AAH1mQtbBY6MnfClkSwprX4jWiIW2x8eMlo
 
 [RedisConfig]
-host=redis-12842.c83.us-east-1-2.ec2.cloud.redislabs.com
-port=12842
-password=4K4jk4SxGmwNaH3dVLD5kIYvByxQwP4L
+host=redis-14812.c83.us-east-1-2.ec2.cloud.redislabs.com
+port=14812
+password=uTCajw3RhCLFVrwARTkPhlmc2vwgkRAm
 db=0
 
 [StandartValueConfig]
@@ -12,8 +12,9 @@ min_length_nickname=4
 max_length_nickname=60
 min_length_description=6
 max_length_description=500
-standart_name=uncnown
+standart_name=неизвестный
 standart_description=cкрытность - моё второе имя
-time_sleep_new_member=0.2
-time_sleep_end_member=0.3
-time_sleep_new_message=0.1
+time_sleep_new_member=0.3
+time_sleep_end_member=0.4
+time_sleep_new_message_single=0.1
+time_sleep_new_message_group=0.3
